gitops/apps/podinfo/image-deployment/istio-ingress-policy.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: prod
spec:
  hosts:
    - "podinfo.local.gd"
  http:
    - route:
        - destination:
            host: backend
            port:
              number: 9898
  gateways:
    - "istio-system/public-gateway"
---
